[package]
name = "inclusive"
version = "0.1.0"
edition = "2024"
description = "Include code from other languages in your rust binary"
license = "MIT"

[dependencies]
miette = { version = "7.6.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
miette = ["dep:miette"]
fancy = ["miette", "miette/fancy"]
